css/editor.css
html {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-size: 16px;
}

body {
	margin: 0;
	height: 100%;
	position: relative;
	font-family: monospace;
}

header {
	height: 50px;
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: space-between;
	background: black;
	color: white;
	padding: 0 1.5em;
	box-sizing: border-box;
	border-bottom: 3px solid #369;
}

#names, #document-name-wrapper {
	display: flex;
	font-size: 0 !important;
}
#names > *,
#document-name-wrapper > * {
	font-size: 1rem;
}

#site-title {
	color: #0F0;
}

#document-name-wrapper {
	font-size: 1rem;
}

#document-name {
	background: none;
	border: none;
	color: inherit;
	font: inherit;
	font-size: 1rem;
	padding: 0;
	margin: 0;
}
#document-name:focus,
#document-name:hover {
	outline: none;
	border-bottom: 1px solid #0F0;
}

#buttons {
	display: flex;
	list-style: none;
}

#buttons li {
	margin-left: 1em;
	font-family: Roboto, sans-serif;
}

#buttons li:hover {
	text-decoration: underline;
	cursor: pointer;
}

#user-list {
	position: fixed;
	bottom: -350px;
	right: 10px;
	z-index: 9001;
	height: 300px;
	box-shadow: 0 0 3px rgba(0, 0, 0, 0.4),
		-2px 1px 5px rgba(0, 0, 0, 0.2);
	
	transition-property: bottom;
	-webkit-transition: 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
	-moz-transition: 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
	-o-transition: 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
	transition: 500ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
}

#user-list.visible {
	bottom: 0;
}

.firepad-userlist {
	display: inline-block;
}

content {
	position: absolute;
	top: 50px;
	left: 0;
	right: 0;
	bottom: 0;
	display: flex;
}

.firepad {
	flex: 1;
}

#firepad-container {
	width: 100%;
	height: 100%;
	box-sizing: border-box;
}

#result-container {
	flex: 1;
	height: 100%;
	box-sizing: border-box;
	border: none;
}

.cm-s-ambiance .CodeMirror-linenumber {
	color: #CCC;
}

.toast {
	background-color: #369;
}

/*
 * Full screen on mobile devices
 */
@media only screen and (max-width: 768px) {
	#result-container {
		position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
		z-index: 9000;
		width: 100vw;
		background-color: white;
	}
}

